--- a/aboutus.html
+++ b/aboutus.html
@@ -11,24 +11,6 @@
 </head>
 <body>
   <div class="overlay"></div>
-  <div class="cursor">
-    <div class="cursor__block">
-      <div class="cursor__wrapper">
-        <div class="cursor__text cursor__text_slider">
-          <p>
-            <svg width="80" height="26" viewBox="0 0 80 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0.545556 14.0454C-0.18185 13.5274 -0.181853 12.4726 0.545553 11.9546L16.9788 0.253285C17.8607 -0.374635 19.1034 0.236825 19.1034 1.29864V24.7014C19.1034 25.7632 17.8607 26.3746 16.9788 25.7467L0.545556 14.0454Z" fill="currentColor"/>
-              <path d="M79.4544 14.0454C80.1819 13.5274 80.1819 12.4726 79.4544 11.9546L63.0212 0.253285C62.1393 -0.374635 60.8966 0.236825 60.8966 1.29864V24.7014C60.8966 25.7632 62.1393 26.3746 63.0212 25.7467L79.4544 14.0454Z" fill="currentColor"/>
-              <path d="M45.9705 13.2336C45.9705 16.4353 43.2974 19.0308 40 19.0308C36.7026 19.0308 34.0295 16.4353 34.0295 13.2336C34.0295 10.0318 36.7026 7.43635 40 7.43635C43.2974 7.43635 45.9705 10.0318 45.9705 13.2336Z" fill="currentColor"/>
-            </svg>
-          </p>
-        </div>
-        <div class="cursor__text cursor__text_showreel"><p>ОТКРЫТЬ</p></div>
-      </div>
-      <div class="cursor__left"></div>
-      <div class="cursor__right"></div>
-    </div>
-  </div>
   <header class="header">
     <div class="header__close"></div>
     <div class="border"><span></span></div>
@@ -69,28 +51,28 @@
                 <li class="header__nav_item">
                   <a href="terminals.html" class="header__nav_link body_small">
                     <span>Терминалы</span>
-                    <button class="header__nav_link_svg">
+                    <div class="header__nav_link_svg">
                       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
                         <path d="M4.33496 13.2469L8.4551 8.66736L4.33496 4.07783L5.60339 2.66797L11.0009 8.66736L5.60339 14.6667L4.33496 13.2469Z" fill="currentColor"/>
                       </svg>
-                    </button>
+                    </div>
                   </a>
                 </li>
                 <li class="header__nav_item">
                   <a href="software.html" class="header__nav_link body_small">
                     <span>Программное обеспечение</span>
-                    <button class="header__nav_link_svg">
+                    <div class="header__nav_link_svg">
                       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
                         <path d="M4.33496 13.2469L8.4551 8.66736L4.33496 4.07783L5.60339 2.66797L11.0009 8.66736L5.60339 14.6667L4.33496 13.2469Z" fill="currentColor"/>
                       </svg>
-                    </button>
+                    </div>
                   </a>
                 </li>
                 <li class="header__nav_item">
                   <a href="vacancies.html" class="header__nav_link body_small"><span>Вакансии</span></a>
                 </li>
                 <li class="header__nav_item">
-                  <a href="#" class="header__nav_link body_small"><span>Контакты</span></a>
+                  <a href="contacts.html" class="header__nav_link body_small"><span>Контакты</span></a>
                 </li>
               </ul>
             </nav>
@@ -299,32 +281,47 @@
             <div class="header__popup popup"></div>
           </div>
         </div>
-        <a href="tel://8800" class="btn btn__secondary header__btn">
-          <span>Связаться</span>
-          <span class="btn__arrow">
-            <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-              <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-            </svg>
-          </span>
-        </a>
-        <button class="header__burger" aria-label="Открыть меню">
-          <div class="header__burger_flex">
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="header__btn_wrapper">
+          <div class="header__language">
+            <a>
+              <span id="language" class="body_small">Ru</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+              </svg>
+            </a>
           </div>
-        </button>
+          <div class="header__language_wrapper">
+            <span class="body_small" id="RU">Русский</span>
+            <span class="body_small" id="EN">English</span>
+          </div>
+          <a href="" class="btn btn__secondary header__btn">
+            <span>Связаться</span>
+            <span class="btn__arrow">
+              <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+              </svg>
+            </span>
+          </a>
+          <button class="header__burger" aria-label="Открыть меню">
+            <div class="header__burger_flex">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </button>
+        </div>
       </div>
     </div>
   </header>
   <main class="main" data-scroll-container>
     <div class="border"><span></span></div>
     <section class="top" data-scroll-section id="top"><div class="border"><span></span></div></section>
-    <section class="hero hero__software" data-scroll-section>
+    <section class="hero" data-scroll-section>
       <div class="hero__back">
         <span class="hero__back_line"></span>
         <span class="hero__back_line"></span>
         <span class="hero__back_line"></span>
+        <canvas class="hero__gradient_one" data-transition-in></canvas>
         <div class="border"><span></span></div>
       </div>
       <div class="container hero__container">
@@ -354,25 +351,24 @@
                   </div>
                 </div>
                 <div class="hero__image">
-                  <div class="hero__circles hero__circles_js">
-                    <button class="hero__circles_mouse hero__circles_mouse_js active">
-                      <span class="hero__circle hero__circle_js">P8 Bio</span>
-                    </button>
-                    <button class="hero__circles_mouse hero__circles_mouse_js">
-                      <span class="hero__circle hero__circle_js">K 10</span>
-                    </button>
-                    <button class="hero__circles_mouse hero__circles_mouse_js">
-                      <span class="hero__circle hero__circle_js">MF 960</span>
-                    </button>
-                    <button class="hero__circles_mouse hero__circles_mouse_js">
-                      <span class="hero__circle hero__circle_js">R 90</span>
-                    </button>
-                    <button class="hero__circles_mouse hero__circles_mouse_js">
-                      <span class="hero__circle hero__circle_js">V 73</span>
-                    </button>
+                  <div class="hero__aboutus hero__circles_js">
+                    <div class="hero__aboutus_mouse hero__aboutus_mouse_js">
+                      <span class="hero__aboutus_flex hero__circle_js">
+                        <img src="img/aboutus/aboutus_1.svg" alt="">
+                        <span class="hero__aboutus_head sub_two">250+</span>
+                        <span class="hero__aboutus_desc body_small">сотрудников</span>
+                      </span>
+                    </div>
+                    <div class="hero__aboutus_mouse hero__aboutus_mouse_js">
+                      <span class="hero__aboutus_flex hero__circle_js">
+                        <img src="img/aboutus/aboutus_2.svg" alt="">
+                        <span class="hero__aboutus_head sub_two">20+</span>
+                        <span class="hero__aboutus_desc body_small">лет опыта работы</span>
+                      </span>
+                    </div>
                   </div>
-                  <div class="software__image_flex">
-                    <img src="img/software/software_hero.webp" alt="">
+                  <div class="hero__image_flex">
+                    <img src="img/aboutus/hero_aboutus.webp" alt="">
                   </div>
                 </div>
               </div>
@@ -422,7 +418,7 @@
                 </div>
               </div>
               <div class="aboutus__right">
-                <div class="aboutus__one_block four" id="aboutus__one">
+                <div class="aboutus__one_block" id="aboutus__one">
                   <div class="aboutus__one_lines">
                     <div class="aboutus__one_line_one"><span></span><span></span><span></span><span></span><span></span></div>
                     <div class="aboutus__one_line_two"><span></span><span></span><span></span><span></span><span></span></div>
@@ -995,7 +991,6 @@
               </div>
             </div>
           </button>
-          <script src="js/video.js"></script>
         </div>
       </div>
     </section>
@@ -1011,6 +1006,11 @@
         </button>
       </div>
     </div>
+    <script>
+      document.querySelector('.showreel__block').innerHTML = '<video poster="./img/terminals/video/video_1.webp " playsinline autoplay muted loop><source src="./img/terminals/video/video_1.mp4" type="video/mp4"></video>';
+      document.querySelector('.showreel__video_responsive').innerHTML = '<video id="showreel__video" poster="./img/terminals/video/video_1.webp " playsinline autoplay loop data-overlay="1" data-title="Unitodi"><source src="./img/terminals/video/video_1.mp4" type="video/mp4"></video>';
+    </script>
+    <script src="js/video.js"></script>
     <section class="team" data-scroll-section>
       <div class="container team__container">
         <div class="border"><span></span></div>
@@ -1097,33 +1097,36 @@
       </div>
     </section>
     <section class="cooperation" data-scroll-section>
-      <div class="container cooperation__container">
+      <div class="cooperation__content">
         <div class="cooperation__back">
           <span class="cooperation__back_line"></span>
           <span class="cooperation__back_line"></span>
+          <canvas class="cooperation__gradient_three" data-transition-in></canvas>
           <div class="border"><span></span></div>
         </div>
-        <div class="cooperation__block">
-          <div class="cooperation__info">
-            <div class="cooperation__image_one animate_image">
-              <img src="img/cooperation/cooperation_1.webp" alt="">
-            </div>
-            <div class="cooperation__image_two animate_image">
-              <img src="img/cooperation/cooperation_2.webp" alt="">
-            </div>
-            <div class="cooperation__flex">
-              <p class="cooperation__name sub_one text_color animate_top">Сотрудничество</p>
-              <h2 class="cooperation__head animate_top">Хочешь работать в нашей компании? Мы ждём твоё резюме.</h2>
-              <p class="cooperation__desc body_two animate_top">Lorem ipsum dolor sit amet consectetur. Blandit cras lorem lectus vitae tincidunt amet. Id orci tincidunt ac quam diam pretium.</p>
-              <div class="cooperation__btn animate_top">
-                <a href="#faq" data-scroll-to class="btn btn__primary">
-                  <span>Оставить заявку</span>
-                  <span class="btn__arrow">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-                      <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-                    </svg>
-                  </span>
-                </a>
+        <div class="container cooperation__container">
+          <div class="cooperation__block">
+            <div class="cooperation__info">
+              <div class="cooperation__image_one animate_image">
+                <img src="img/cooperation/cooperation_1.webp" alt="">
+              </div>
+              <div class="cooperation__image_two animate_image">
+                <img src="img/cooperation/cooperation_2.webp" alt="">
+              </div>
+              <div class="cooperation__flex">
+                <p class="cooperation__name sub_one text_color animate_top">Сотрудничество</p>
+                <h2 class="cooperation__head animate_top">Хочешь работать в нашей компании? Мы ждём твоё резюме.</h2>
+                <p class="cooperation__desc body_two animate_top">Lorem ipsum dolor sit amet consectetur. Blandit cras lorem lectus vitae tincidunt amet. Id orci tincidunt ac quam diam pretium.</p>
+                <div class="cooperation__btn animate_top">
+                  <a href="#faq" data-scroll-to class="btn btn__primary">
+                    <span>Оставить заявку</span>
+                    <span class="btn__arrow">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -1276,7 +1279,7 @@
               <a class="body_caption" href="policy.html">Политика конфиденциальности</a>
             </li>
             <li class="animate_top">
-              <a class="body_caption" target="_blank" href="https://anyera.one/">Разработано Anyera Didgital & Disign</a>
+              <a class="body_caption" target="_blank" href="https://anyera.one/">Разработано Anyera Digital & Design</a>
             </li>
           </ul>
         </div>
@@ -1289,6 +1292,7 @@
   <script src="js/scrollbar.js"></script>
   <script src="js/main.js"></script>
   <script src="js/animate.js"></script>
+  <script src="js/linecolor.js"></script>
   <script>
     window.onload = function () {
       window.setTimeout(function () {
