--- a/softwareCard.html
+++ b/softwareCard.html
@@ -11,24 +11,6 @@
 </head>
 <body>
   <div class="overlay"></div>
-  <div class="cursor">
-    <div class="cursor__block">
-      <div class="cursor__wrapper">
-        <div class="cursor__text cursor__text_slider">
-          <p>
-            <svg width="80" height="26" viewBox="0 0 80 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0.545556 14.0454C-0.18185 13.5274 -0.181853 12.4726 0.545553 11.9546L16.9788 0.253285C17.8607 -0.374635 19.1034 0.236825 19.1034 1.29864V24.7014C19.1034 25.7632 17.8607 26.3746 16.9788 25.7467L0.545556 14.0454Z" fill="currentColor"/>
-              <path d="M79.4544 14.0454C80.1819 13.5274 80.1819 12.4726 79.4544 11.9546L63.0212 0.253285C62.1393 -0.374635 60.8966 0.236825 60.8966 1.29864V24.7014C60.8966 25.7632 62.1393 26.3746 63.0212 25.7467L79.4544 14.0454Z" fill="currentColor"/>
-              <path d="M45.9705 13.2336C45.9705 16.4353 43.2974 19.0308 40 19.0308C36.7026 19.0308 34.0295 16.4353 34.0295 13.2336C34.0295 10.0318 36.7026 7.43635 40 7.43635C43.2974 7.43635 45.9705 10.0318 45.9705 13.2336Z" fill="currentColor"/>
-            </svg>
-          </p>
-        </div>
-        <div class="cursor__text cursor__text_showreel"><p>ОТКРЫТЬ</p></div>
-      </div>
-      <div class="cursor__left"></div>
-      <div class="cursor__right"></div>
-    </div>
-  </div>
   <header class="header">
     <div class="header__close"></div>
     <div class="border"><span></span></div>
@@ -69,21 +51,21 @@
                 <li class="header__nav_item">
                   <a href="terminals.html" class="header__nav_link body_small">
                     <span>Терминалы</span>
-                    <button class="header__nav_link_svg">
+                    <div class="header__nav_link_svg">
                       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
                         <path d="M4.33496 13.2469L8.4551 8.66736L4.33496 4.07783L5.60339 2.66797L11.0009 8.66736L5.60339 14.6667L4.33496 13.2469Z" fill="currentColor"/>
                       </svg>
-                    </button>
+                    </div>
                   </a>
                 </li>
                 <li class="header__nav_item">
                   <a href="software.html" class="header__nav_link body_small">
                     <span>Программное обеспечение</span>
-                    <button class="header__nav_link_svg">
+                    <div class="header__nav_link_svg">
                       <svg xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
                         <path d="M4.33496 13.2469L8.4551 8.66736L4.33496 4.07783L5.60339 2.66797L11.0009 8.66736L5.60339 14.6667L4.33496 13.2469Z" fill="currentColor"/>
                       </svg>
-                    </button>
+                    </div>
                   </a>
                 </li>
                 <li class="header__nav_item">
@@ -299,29 +281,50 @@
             <div class="header__popup popup"></div>
           </div>
         </div>
-        <a href="tel://8800" class="btn btn__secondary header__btn">
-          <span>Связаться</span>
-          <span class="btn__arrow">
-            <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-              <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-            </svg>
-          </span>
-        </a>
-        <button class="header__burger" aria-label="Открыть меню">
-          <div class="header__burger_flex">
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="header__btn_wrapper">
+          <div class="header__language">
+            <a>
+              <span id="language" class="body_small">Ru</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+              </svg>
+            </a>
           </div>
-        </button>
+          <div class="header__language_wrapper">
+            <span class="body_small" id="RU">Русский</span>
+            <span class="body_small" id="EN">English</span>
+          </div>
+          <a href="" class="btn btn__secondary header__btn">
+            <span>Связаться</span>
+            <span class="btn__arrow">
+              <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+              </svg>
+            </span>
+          </a>
+          <button class="header__burger" aria-label="Открыть меню">
+            <div class="header__burger_flex">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </button>
+        </div>
       </div>
     </div>
   </header>
   <main class="main" data-scroll-container>
     <div class="border"><span></span></div>
-    <section class="top" data-scroll-section id="top"><div class="border"><span></span></div></section> 
-    <section class="breadcrumbs" data-scroll-section>
-      <div class="container breadcrumbs__container">
+    <section class="top" data-scroll-section id="top"><div class="border"><span></span></div></section>
+    <section class="hero hero__softwareCard" data-scroll-section>
+      <div class="hero__back">
+        <span class="hero__back_line"></span>
+        <span class="hero__back_line"></span>
+        <span class="hero__back_line"></span>
+        <canvas class="hero__gradient_one" data-transition-in></canvas>
+        <div class="border"><span></span></div>
+      </div>
+      <div class="container hero__container">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item animate_top">
             <a href="index.html" class="body_caption breadcrumbs__link">Главная</a>
@@ -333,60 +336,58 @@
             <a href="softwareCard.html" class="body_caption breadcrumbs__link">Unitodi pay app</a>
           </li>
         </ul>
-      </div>
-    </section>
-    <section class="hero hero__software hero__softwareCard" data-scroll-section>
-      <div class="hero__back">
-        <span class="hero__back_line"></span>
-        <span class="hero__back_line"></span>
-        <span class="hero__back_line"></span>
-        <div class="border"><span></span></div>
-      </div>
-      <div class="container hero__container">
       <div class="hero__block">
         <div class="hero__slider">
-          <div class="hero__swiper swiper">
-            <div class="hero__wrapper swiper-wrapper">
-              <div class="hero__flex swiper-slide">
-                <div class="hero__info">
-                  <p class="hero__head"><span class="text_color">Unitodi pay app</span></p>
-                  <ul class="small animate_left">
-                    <li>Трансформируйте эквайринговый терминал в Онлайн-кассу.</li>
-                    <li>Принимайте любые типы банковских карт и наличные в соответствии с 54-ФЗ.</li>
-                    <li>Управляйте продажами через личный кабинет с функцией товароучёта.</li>
-                  </ul>
-                  <div class="hero__button">
-                    <a href="#" class="btn btn__primary hero__btn">
-                      <span>Оставить заявку</span>
-                      <span class="btn__arrow">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-                          <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-                        </svg>
-                      </span>
-                    </a>
+          <div class="hero__wrapper">
+            <div class="hero__flex">
+              <div class="hero__info">
+                <p class="hero__head"><span class="text_color">Unitodi pay app</span></p>
+                <ul class="small animate_left">
+                  <li>Трансформируйте эквайринговый терминал в Онлайн-кассу.</li>
+                  <li>Принимайте любые типы банковских карт и наличные в соответствии с 54-ФЗ.</li>
+                  <li>Управляйте продажами через личный кабинет с функцией товароучёта.</li>
+                </ul>
+                <div class="hero__button">
+                  <a href="#" class="btn btn__primary hero__btn">
+                    <span>Оставить заявку</span>
+                    <span class="btn__arrow">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+              </div>
+              <div class="hero__image">
+                <div class="hero__softwareCard hero__circles_js">
+                  <div class="hero__softwareCard_mouse hero__softwareCard_mouse_js">
+                    <span class="hero__softwareCard_flex hero__circle_js">
+                      <img src="img/softwareCard/softwareCard_1.svg" alt="">
+                      <span class="hero__softwareCard_head body_small">Любые платежи</span>
+                    </span>
+                  </div>
+                  <div class="hero__softwareCard_mouse hero__softwareCard_mouse_js">
+                    <span class="hero__softwareCard_flex hero__circle_js">
+                      <img src="img/softwareCard/softwareCard_2.svg" alt="">
+                      <span class="hero__softwareCard_head body_small">54-ФЗ</span>
+                    </span>
+                  </div>
+                  <div class="hero__softwareCard_mouse hero__softwareCard_mouse_js">
+                    <span class="hero__softwareCard_flex hero__circle_js">
+                      <img src="img/softwareCard/softwareCard_3.svg" alt="">
+                      <span class="hero__softwareCard_head body_small">Товароучёт</span>
+                    </span>
+                  </div>
+                  <div class="hero__softwareCard_mouse hero__softwareCard_mouse_js">
+                    <span class="hero__softwareCard_flex hero__circle_js">
+                      <img src="img/softwareCard/softwareCard_4.svg" alt="">
+                      <span class="hero__softwareCard_head body_small">Личный кабинет</span>
+                    </span>
                   </div>
                 </div>
-                <div class="hero__image">
+                <div class="hero__image_flex">
                   <img src="img/softwareCard/softwareCard_hero.webp" alt="">
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="hero__navigation">
-            <div class="hero__counter body_one">
-              <span class="hero__count">01</span>/<span class="hero__total"></span>
-            </div>
-            <div class="hero__pagination swiper-pagination"></div>
-            <div class="hero__navigation_flex">
-              <div class="swiper-button-prev hero__prev">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                  <path d="M20.8477 23.6313L14.8542 16.9695L20.8477 10.2931L19.0026 8.24219L11.1508 16.9695L19.0026 25.6967L20.8477 23.6313Z" fill="currentColor"/>
-                </svg>
-              </div>
-              <div class="swiper-button-next hero__next">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                  <path d="M11.1523 23.6313L17.1458 16.9695L11.1523 10.2931L12.9974 8.24219L20.8492 16.9695L12.9974 25.6967L11.1523 23.6313Z" fill="currentColor"/>
-                </svg>
               </div>
             </div>
           </div>
@@ -648,7 +649,7 @@
               <a class="body_caption" href="policy.html">Политика конфиденциальности</a>
             </li>
             <li class="animate_top">
-              <a class="body_caption" target="_blank" href="https://anyera.one/">Разработано Anyera Didgital & Disign</a>
+              <a class="body_caption" target="_blank" href="https://anyera.one/">Разработано Anyera Digital & Design</a>
             </li>
           </ul>
         </div>
@@ -661,6 +662,7 @@
   <script src="js/scrollbar.js"></script>
   <script src="js/main.js"></script>
   <script src="js/animate.js"></script>
+  <script src="js/linecolor.js"></script>
   <script>
     window.onload = function () {
       window.setTimeout(function () {
